--- a/freundeliste.html
+++ b/freundeliste.html
@@ -12,7 +12,7 @@
       width="200"
       height="200"
     />
-    <h1>Friends</h1>
+    <h1>HAHAH</h1>
     <p><a href="http://127.0.0.1:5500/ChatApp/logout.html">Logout</a></p>
     <hr />
     <p>
